list and things

--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>This is a title</title>
 </head>
 <body>
-    <h1>This is the HTML boilerplates body</h1>
+    <h1> WOWEEE A H1,This is the HTML boilerplates body</h1>
     <h2> this is a h2 </h2>
-    <p>this is a paragraph<p>
+    <h3> omg a h3</h3>
+    <p>this is a paragraph for yapping<p>
+        <p>a list of places i want to go<p>
+        <ul>
+            <li>Japan 
+            <li> NYC 
+            <li>San Juan de Gaztelugatxe (Dragonstone)
+        </ul>
+    <ol>
+        <li>Vintage clothing shopping in Japan
+        <li>Go hiking in Japan
+        <li>Go to the top of the empire state building
+        <li>Visit time square
+        <li>Re-inact a scene of GOT/HOTD
+    </ol>
 </body>
 </html>
